[package]
name = "olorin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
